--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <!-- Services Section -->
   <section class="services" id="services">
     <div class="max-width">
-      <h2 class="title" data-aos="fade-down">My Services</h2>
+      <h2 class="title" data-aos="fade-down">My Projects</h2>
       <div class="serv-content">
         <div class="card" data-aos="flip-left">
           <div class="box">
